--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -708,6 +708,9 @@
     <ClCompile Include="Application\SourceCode\SceneTransition.cpp">
       <Filter>Application\Source\Transition</Filter>
     </ClCompile>
+    <ClCompile Include="Application\SourceCode\LeadEffect.cpp">
+      <Filter>Application\Source\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -1171,6 +1174,9 @@
     </ClInclude>
     <ClInclude Include="Application\SourceCode\SceneTransition.h">
       <Filter>Application\Header\Transition</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\LeadEffect.h">
+      <Filter>Application\Header\Effect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
