とりあえず構造化バッファを使ってSRVとUAVを作成できた

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -234,13 +234,18 @@
     <ClCompile Include="NewEngine\Object\3D\SilhouetteObj.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture.cpp" />
     <ClCompile Include="NewEngine\Object\Other\TextureAnimeiton.cpp" />
+    <ClCompile Include="NewEngine\Render\Buffer\BufferResource.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\DepthBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp" />
+    <ClCompile Include="NewEngine\Render\Buffer\StructuredBuffer.cpp" />
+    <ClCompile Include="NewEngine\Render\DescriptorHeap.cpp" />
+    <ClCompile Include="NewEngine\Render\DescriptorHeapManager.cpp" />
     <ClCompile Include="NewEngine\Render\GraphicsPipeline.cpp" />
     <ClCompile Include="NewEngine\Render\GraphicsPipelineManager.cpp" />
     <ClCompile Include="NewEngine\Render\RenderBase.cpp" />
     <ClCompile Include="NewEngine\Render\RenderWindow.cpp" />
     <ClCompile Include="NewEngine\Render\RootSignature.cpp" />
+    <ClCompile Include="NewEngine\Render\RWStructuredBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\ScissorRectangle.cpp" />
     <ClCompile Include="NewEngine\Render\ShaderObject.cpp" />
     <ClCompile Include="NewEngine\Render\ShaderObjectManager.cpp" />
@@ -384,17 +389,23 @@
     <ClInclude Include="NewEngine\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Object\3D\OutLineObj.h" />
     <ClInclude Include="NewEngine\Object\3D\SilhouetteObj.h" />
+    <ClInclude Include="NewEngine\Render\Buffer\BufferResource.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBufferData.h" />
     <ClInclude Include="NewEngine\Render\Buffer\DepthBuffer.h" />
+    <ClInclude Include="NewEngine\Render\Buffer\IConstantBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\IndexBuffer.h" />
+    <ClInclude Include="NewEngine\Render\Buffer\StructuredBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\VertexBuffer.h" />
+    <ClInclude Include="NewEngine\Render\DescriptorHeap.h" />
+    <ClInclude Include="NewEngine\Render\DescriptorHeapManager.h" />
     <ClInclude Include="NewEngine\Render\GraphicsPipeline.h" />
     <ClInclude Include="NewEngine\Render\GraphicsPipelineManager.h" />
     <ClInclude Include="NewEngine\Render\RenderBase.h" />
     <ClInclude Include="NewEngine\Render\RenderTarget.h" />
     <ClInclude Include="NewEngine\Render\RenderWindow.h" />
     <ClInclude Include="NewEngine\Render\RootSignature.h" />
+    <ClInclude Include="NewEngine\Render\RWStructuredBuffer.h" />
     <ClInclude Include="NewEngine\Render\ScissorRectangle.h" />
     <ClInclude Include="NewEngine\Render\ShaderObject.h" />
     <ClInclude Include="NewEngine\Render\ShaderObjectManager.h" />
