--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -283,6 +283,18 @@
     <Filter Include="NewEngine\Source\Render\DescriptorHeap">
       <UniqueIdentifier>{06517463-70e2-4119-b87b-9980dad25945}</UniqueIdentifier>
     </Filter>
+    <Filter Include="NewEngine\Source\Render\Pipeline">
+      <UniqueIdentifier>{8169adda-d233-4ce4-9024-3db8c895fa23}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewEngine\Header\Render\Pipeline">
+      <UniqueIdentifier>{6c0ecbe1-4d46-4067-9f3f-60015c3b5633}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewEngine\Source\Render\ShaderObject">
+      <UniqueIdentifier>{476a86bb-2911-4c35-83df-34e09e6cec09}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewEngine\Header\Render\ShaderObject">
+      <UniqueIdentifier>{ede8b782-52bf-48fb-9310-c6ec24d25802}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -297,13 +309,7 @@
     <ClCompile Include="NewEngine\Render\ScissorRectangle.cpp">
       <Filter>NewEngine\Source\Render</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Render\ShaderObject.cpp">
-      <Filter>NewEngine\Source\Render</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Render\Viewport.cpp">
-      <Filter>NewEngine\Source\Render</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Render\GraphicsPipeline.cpp">
       <Filter>NewEngine\Source\Render</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\main.cpp">
@@ -429,9 +435,6 @@
     <ClCompile Include="NewEngine\Object\2D\CircleGaugeSprite.cpp">
       <Filter>NewEngine\Source\Object\2D</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Render\GraphicsPipelineManager.cpp">
-      <Filter>NewEngine\Source\Render</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Object\2D\RenderTexture.cpp">
       <Filter>NewEngine\Source\Object\Other</Filter>
     </ClCompile>
@@ -443,9 +446,6 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Sound\Sound.cpp">
       <Filter>NewEngine\Source\Sound</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Render\ShaderObjectManager.cpp">
-      <Filter>NewEngine\Source\Render</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\TextureAnimeiton.cpp">
       <Filter>NewEngine\Source\Object\Other</Filter>
@@ -735,6 +735,21 @@
     <ClCompile Include="NewEngine\Render\RWStructuredBuffer.cpp">
       <Filter>NewEngine\Source\Render\Buffer</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Render\GraphicsPipeline.cpp">
+      <Filter>NewEngine\Source\Render\Pipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Render\GraphicsPipelineManager.cpp">
+      <Filter>NewEngine\Source\Render\Pipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Render\ShaderObject.cpp">
+      <Filter>NewEngine\Source\Render\ShaderObject</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Render\ShaderObjectManager.cpp">
+      <Filter>NewEngine\Source\Render\ShaderObject</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Render\ComputePipeline.cpp">
+      <Filter>NewEngine\Source\Render\Pipeline</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -752,13 +767,7 @@
     <ClInclude Include="NewEngine\Render\ScissorRectangle.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Render\ShaderObject.h">
-      <Filter>NewEngine\Header\Render</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Render\Viewport.h">
-      <Filter>NewEngine\Header\Render</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Render\GraphicsPipeline.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\NewEngine.h">
@@ -902,9 +911,6 @@
     <ClInclude Include="NewEngine\Render\VertexBufferData.h">
       <Filter>NewEngine\Header\Render\Buffer</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Render\GraphicsPipelineManager.h">
-      <Filter>NewEngine\Header\Render</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Sound\SoundManager.h">
       <Filter>NewEngine\Header\Sound</Filter>
     </ClInclude>
@@ -915,9 +921,6 @@
       <Filter>NewEngine\Header\Render\Buffer</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Render\RenderBase.h">
-      <Filter>NewEngine\Header\Render</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Render\ShaderObjectManager.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\TextureAnimeiton.h">
@@ -1222,6 +1225,21 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Render\RWStructuredBuffer.h">
       <Filter>NewEngine\Header\Render\Buffer</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\GraphicsPipelineManager.h">
+      <Filter>NewEngine\Header\Render\Pipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\GraphicsPipeline.h">
+      <Filter>NewEngine\Header\Render\Pipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\ShaderObject.h">
+      <Filter>NewEngine\Header\Render\ShaderObject</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\ShaderObjectManager.h">
+      <Filter>NewEngine\Header\Render\ShaderObject</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Render\ComputePipeline.h">
+      <Filter>NewEngine\Header\Render\Pipeline</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
